tests/ui/rust-2018/uniform-paths/prelude-fail-2.stderr
error: cannot use a built-in attribute through an import
  --> $DIR/prelude-fail-2.rs:9:3
   |
LL | #[imported_inline]
   |   ^^^^^^^^^^^^^^^
   |
note: the built-in attribute imported here
  --> $DIR/prelude-fail-2.rs:4:5
   |
LL | use inline as imported_inline;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot use a built-in attribute through an import
  --> $DIR/prelude-fail-2.rs:10:3
   |
LL | #[builtin::imported_inline]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

